# marketplace-eligibility-engine

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Caddyfile  DESIGN_DECISIONS.md  Dockerfile.test  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: Dockerfile  app.py
db-init/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: live-smoke.spec.ts  product-detail-layout.spec.ts
frontend/public/: architecture-overview.html  competitor-landscape.html  industry-landscape.html  owner-summary.html  seller-landscape.html
frontend/public/data/: wholefoods-coffee-latest.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: analytics.ts  client.ts  diagnose.ts  evaluate.ts  items.ts  markets.ts  scenarios.ts  sellers.ts  system.ts
nginx/: nginx.conf
scripts/: category_snapshot.py  perf_test.py  seed.py
services/eligibility-service/: Dockerfile  requirements.txt
services/inventory-service/: Dockerfile  alembic.ini
services/item-service/: Dockerfile  alembic.ini  requirements.txt
services/seller-service/: Dockerfile  requirements.txt
services/shared/: catalog_data.py  constants.py  http_client.py  redis_streams.py  scenario_data.py
tests/: test_batch_evaluate.py  test_diagnosis.py  test_evaluator.py  test_geo_restrictions.py  test_global_markets.py  test_inventory_confidence.py  test_new_features.py  test_scenarios.py  test_seller_ipi.py  test_seller_performance.py
(+103 files in other folders)
